--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
-    "dev": "ts-node-dev src/index.ts",
+    "start": "node NODE_ENV=production build/index.js",
+    "dev": "ts-node-dev --exit-child src/index.ts",
     "lint": "eslint --ext .ts .",
     "prettier": "prettier --config .prettierrc.json 'src/**/*.ts' --write",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "db:seed": "ts-node prisma/seed.ts"
   },
   "author": "Vadim Stebakov",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "prisma": "^4.3.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
