--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "trades-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node NODE_ENV=production build/index.js",
-    "dev": "ts-node-dev --exit-child src/index.ts",
+    "start": "NODE_ENV=production node build/src/index.js",
+    "dev": "NODE_ENV=development ts-node-dev --exit-child src/index.ts",
+    "build": "tsc --project ./",
     "lint": "eslint --ext .ts .",
     "prettier": "prettier --config .prettierrc.json 'src/**/*.ts' --write",
-    "db:seed": "ts-node prisma/seed.ts"
+    "db:seed": "dotenv -e .env -- ts-node prisma/seed.ts",
+    "docker:migrate": "dotenv -e .env.test -- npx prisma migrate dev",
+    "docker:seed": "dotenv -e .env.test -- ts-node prisma/seed.ts",
+    "docker:jest": "dotenv -e .env.test jest -i",
+    "docker:test": "npm run docker:migrate && npm run docker:seed && npm run docker:jest"
   },
   "author": "Vadim Stebakov",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.3.1",
     "dotenv": "^16.0.2",
+    "dotenv-cli": "^6.0.0",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "prisma": "^4.3.1"
@@ -22,12 +28,16 @@
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.1.1",
     "@types/morgan": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "eslint": "^8.23.0",
+    "jest": "^29.1.2",
+    "jest-mock-extended": "^3.0.1",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.4"
   }
 }
